--- a/unicreate/herbal-en.html
+++ b/unicreate/herbal-en.html
@@ -1,13 +1,24 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>有益帖 UNICREATE | Brand Story</title>
+		<title>有益帖 UNICREATE From the inside out, giving you the best</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name='description' content="Explore our dedicated herbal products website, offering a variety of herbal tea bags and health supplements. We specialize in formulating remedies for various health issues, while also continuously developing more herbal-related products, such as herbal health supplements and herbal essence drinks. On the journey towards health and nature, we are your ideal partner. " />
+		<meta name='keywords' content="Herbal tea, health supplements, herbal health, herbal therapy, health products, health drinks, essence drinks, liver protection, natural herbal tea, herbal nutritional supplements." />
+		<meta property="og:image" content="images/share_pic.png" />
+		<meta property="og:title" content="有益帖 UNICREATE From the inside out, giving you the best" />
+		<meta property="og:url" content="#" />
+		<meta property="og:description" content="Explore our dedicated herbal products website, offering a variety of herbal tea bags and health supplements. We specialize in formulating remedies for various health issues, while also continuously developing more herbal-related products, such as herbal health supplements and herbal essence drinks. On the journey towards health and nature, we are your ideal partner. " />
+		<meta property="og:type" content="website" />
+
+
 		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/style.css">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript>
+			<link rel="stylesheet" href="assets/css/noscript.css" />
+		</noscript>
 		
 	</head>
 	<body class="is-preload">
