--- a/unicreate/herbal-jp.html
+++ b/unicreate/herbal-jp.html
@@ -1,13 +1,24 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>有益帖 UNICREATE | ブランドストーリー</title>
+		<title>有益帖 UNICREATE 内側から外側へ、最善をあなたに</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name='description' content="私たちのハーブ製品専門のウェブサイトを探索してみてください。各種のハーブティーバッグや健康補助食品を提供しています。私たちは様々な健康問題の調整に専念し、同時にハーブ関連の製品、例えばハーブの健康補助食品やハーブエッセンスドリンクなど、より多くの商品の開発にも取り組んでいます。健康と自然を追求する道のりにおいて、私たちはあなたの最良のパートナーです。" />
+		<meta name='keywords' content="ハーブティー、健康補助食品、ハーブ健康、ハーブ療法、健康製品、健康飲料、エッセンスドリンク、肝臓保護、天然ハーブティー、ハーブ栄養補給品。" />
+		<meta property="og:image" content="images/share_pic.png" />
+		<meta property="og:title" content="有益帖 UNICREATE 内側から外側へ、最善をあなたに "/>
+		<meta property="og:url" content="#" />
+		<meta property="og:description" content="私たちのハーブ製品専門のウェブサイトを探索してみてください。各種のハーブティーバッグや健康補助食品を提供しています。私たちは様々な健康問題の調整に専念し、同時にハーブ関連の製品、例えばハーブの健康補助食品やハーブエッセンスドリンクなど、より多くの商品の開発にも取り組んでいます。健康と自然を追求する道のりにおいて、私たちはあなたの最良のパートナーです。" />
+		<meta property="og:type" content="website" />
+
+		
 		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/style.css">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript>
+			<link rel="stylesheet" href="assets/css/noscript.css" />
+		</noscript>
 		
 	</head>
 	<body class="is-preload">
@@ -300,8 +311,11 @@
 							体質を調整し、心と体をバランスを整える低カロリー、砂糖不使用、無負担</p>
 
 							<p class="price">
-								量販パック：¥4,630（16 個入り）- 自己使用に適しています。<br>
-								プレミアムギフトボックス：¥2,890（プレミアム 5 個入り）- ギフトに最もエレガントな選択です。
+								量販パック：¥4,630（16 個入り）
+								<!-- - 自己使用に適しています。 -->
+								<br>
+								プレミアムギフトボックス：¥2,890（プレミアム 5 個入り）
+								<!-- - ギフトに最もエレガントな選択です。 -->
 							</p>
 						</div>
 						<div class="image">
@@ -349,8 +363,8 @@
 							学習者のための必須茶<br>
 							低カロリー、砂糖不使用、負担なし</p>
 							<p class="price">
-								量販パック：¥4,630（16 個入り）。<br>
-								プレミアムギフトボックス：¥2,890（5 個入り）。
+								量販パック：¥4,630（16 個入り）<br>
+								プレミアムギフトボックス：¥2,890（5 個入り）
 							</p>
 						</div>
 						<div class="image">
@@ -402,8 +416,11 @@
 							低カロリー、砂糖無し、負担無し」</p>
 					
 							<p class="price">
-								量販パック：¥4,630（16 個入り）- 自己使用に適しています。<br>
-								プレミアムギフトボックス：¥2,890（プレミアム 5 個入り）- ギフトに最もエレガントな選択です。
+								量販パック：¥4,630（16 個入り）
+								<!-- - 自己使用に適しています -->
+								<br>
+								プレミアムギフトボックス：¥2,890（プレミアム 5 個入り）
+								<!-- - ギフトに最もエレガントな選択です -->
 							</p>
 						</div>
 						<div class="image">
@@ -457,8 +474,11 @@
 							低カロリー、無糖、負担なし<br>
 							</p>
 							<p class="price">
-								量販パック：¥4,630（16 個入り）- 自己使用に適しています。<br>
-								プレミアムギフトボックス：¥2,890（プレミアム 5 個入り）- ギフトに最もエレガントな選択です。
+								量販パック：¥4,630（16 個入り）
+								<!-- - 自己使用に適しています。 -->
+								<br>
+								プレミアムギフトボックス：¥2,890（プレミアム 5 個入り）
+								<!-- - ギフトに最もエレガントな選択です。 -->
 							</p>
 						</div>
 						<div class="image">
@@ -511,8 +531,11 @@
 							</p>
 					
 							<p class="price">
-								量販パック：¥4,630（16 個入り）- 自己使用に適しています。<br>
-								プレミアムギフトボックス：¥2,890（プレミアム 5 個入り）- ギフトに最もエレガントな選択です。
+								量販パック：¥4,630（16 個入り）
+								<!-- - 自己使用に適しています。 -->
+								<br>
+								プレミアムギフトボックス：¥2,890（プレミアム 5 個入り）
+								<!-- - ギフトに最もエレガントな選択です。 -->
 							</p>
 						</div>
 						<div class="image">
