CRM - 客戶詳情頁新增「負責人欄位」

--- a/CRM/customer.html
+++ b/CRM/customer.html
@@ -437,6 +437,10 @@
                                 <label class="item-title"><span class="c-red">*</span>名稱</label>
                                 <input class="default" type="" name="" placeholder="公司名稱/個人名稱">
                             </fieldset>
+                            <fieldset class="clearfix">
+                                <label class="item-title"><span class="c-red">*</span>負責人</label>
+                                <input class="default" type="" name="" placeholder="負責人姓名">
+                            </fieldset>
                             <fieldset>
                                 <label class="item-title"><span class="c-red">*</span>統編/身分證編號</label>
                                 <input class="default" type="" name="" placeholder="統一編號/身分證編號">
@@ -660,6 +664,10 @@
                                 <label class="item-title"><span class="c-red">*</span>名稱</label>
                                 <input class="default" type="" name="" placeholder="公司名稱/個人名稱" value="佳量企業股份有限公司">
                             </fieldset>
+                            <fieldset class="clearfix">
+                                <label class="item-title"><span class="c-red">*</span>負責人</label>
+                                <input class="default" type="" name="" placeholder="負責人姓名" value="王老太太">
+                            </fieldset>
                             <!-- 統編/身分證編號 不可修改 input + disabled-->
                             <fieldset>
                                 <label class="item-title"><span class="c-red">*</span>統編/身分證編號</label>
@@ -857,6 +865,10 @@
                             <fieldset class="clearfix">
                                 <label class="item-title"><span class="c-red">*</span>名稱</label>
                                 <input class="default" type="" name="" placeholder="公司名稱/個人名稱" value="佳量企業股份有限公司">
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title"><span class="c-red">*</span>負責人</label>
+                                <input class="default" type="" name="" placeholder="負責人姓名" value="">
                             </fieldset>
                             <fieldset>
                                 <label class="item-title"><span class="c-red">*</span>統編/身分證編號</label>
