--- a/CRM/customer_info.html
+++ b/CRM/customer_info.html
@@ -208,10 +208,16 @@
                                     </span>
                                 </p>
                             </li>
-                            <li>
+                            <li class="flex-2">
                                 <p>
                                     <span class="bg bg-greenlight">匯款帳號</span>
                                     <span>10730123456757</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <span class="bg bg-greenlight">負責人</span>
+                                    <span>王老太太</span>
                                 </p>
                             </li>
                         </ul>
