--- a/CRM/customer_info.html
+++ b/CRM/customer_info.html
@@ -351,6 +351,32 @@
                     </ul>
                 </div>
                 <!-- <p class="text-more"><a href="#">More...</a></p> -->
+                
+            <!-- 報表 -->
+                <div class="company-report-list clearfix">
+                    <h4 class="main-title">報表</h4>
+                    <ul class="info">
+                        <li>
+                            <div class="btn-switch clearfix">
+                                <p class="open">公開</p>
+                                <!-- <p>關閉</p> -->
+                                <div class="switch-type">
+                                    <input id="switch-report" name="switch-report" type="checkbox" checked="">
+                                    <label class="switch-button" for="switch-report"></label>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <p><a href="report_dashboard.html">總覽</a></p>
+                        </li>
+                        <li>
+                            <p><a href="report_daily_results.html">每日成效</a></p>
+                        </li>
+                        <li>
+                            <p><a href="report_data_analysis.html">數據分析</a></p>
+                        </li>
+                    </ul>
+                </div>
 
                 <div class="tools-bar clearfix">
                     <h4 class="main-title">委刊單紀錄</h4>
@@ -701,7 +727,7 @@
             </section>
         </main>
         <footer class="footer-inside">
-            <p>Copyright© 2021 <a href="#" target="_blank">Weblisher Co., Ltd.</a> All Rights Reserved.</p>
+            <p>Copyright© 2023 <a href="#" target="_blank">Weblisher Co., Ltd.</a> All Rights Reserved.</p>
         </footer>
     </section>
     </div>
