WiFiOTG - 教學圖片更新

--- a/iiot/WiFiOTG/teaching.html
+++ b/iiot/WiFiOTG/teaching.html
@@ -249,7 +249,7 @@
 						</div>
 					</div>
 					<div class="teaching_card">
-						<img class="for_radius" src="images/teaching/img_phone_m_03.jpg" alt="">
+						<img class="for_radius" src="images/teaching/img_phone_m_03.png" alt="">
 					</div>
 					
 					<div class="teaching_card">
@@ -274,7 +274,7 @@
 						</div>
 					</div>
 					<div class="teaching_card">
-						<img class="for_radius" src="images/teaching/img_phone_m_02.jpg" alt="">
+						<img class="for_radius" src="images/teaching/img_phone_m_02.png" alt="">
 					</div>
 
 					<!-- 如何還機 -->
@@ -293,7 +293,7 @@
 						</div>
 					</div>
 					<div class="teaching_card">
-						<img class="for_radius" src="images/teaching/img_phone_m_01.jpg" alt="">
+						<img class="for_radius" src="images/teaching/img_phone_m_01.png" alt="">
 					</div>
 					<div class="teaching_card">
 						<div class="a_card">
