add au & change $

--- a/unicreate/herbal-au.html
+++ b/unicreate/herbal-au.html
@@ -127,7 +127,7 @@
 							</div>
 							<h2>Artichoke Liver Care Capsules</h2>
 							<p class="major"><b>
-								<span style="color: #4caf50;">US$89.99</span><br>
+								<span style="color: #4caf50;">A$135.99</span><br>
 								Herbal Energy, Revolutionizing Liver Health</b>
 							</p>
 							<p class="mob-left">Expertly researched, No.1 Artichoke food brand Over 600,000 units sold!<br>
@@ -314,8 +314,8 @@
 							Regulates body constitution, balances mind and body Low-calorie, sugar-free, guilt-free</p>
 
 							<p class="price">
-								Bulk Pack: US$29.99 (16 servings) - suitable for personal use.<br>
-								Premium Gift Box: US$19.99 (5 premium servings) - the most elegant choice for gifts.
+								Bulk Pack: A$45.99 (16 servings) - suitable for personal use.<br>
+								Premium Gift Box: A$29.99 (5 premium servings) - the most elegant choice for gifts.
 							</p>
 						</div>
 						<div class="image">
@@ -364,8 +364,8 @@
 							Vitality Care for the Silver Generation Relieve Daily Stress for Urbanites Essential Tea for Learners<br>
 							Low Calorie, Sugar-Free, No Burden</p>
 							<p class="price">
-								Bulk Pack: US$29.99 (16 servings) - suitable for personal use.<br>
-								Premium Gift Box: US$19.99 (5 premium servings) - the most elegant choice for gifts.
+								Bulk Pack: A$45.99 (16 servings) - suitable for personal use.<br>
+								Premium Gift Box: A$29.99 (5 premium servings) - the most elegant choice for gifts.
 							</p>
 						</div>
 						<div class="image">
@@ -414,8 +414,8 @@
 							The warm tea aroma helps relieve stress. Low-calorie, sugar-free, and burden-free.</p>
 					
 							<p class="price">
-								Bulk Pack: US$29.99 (16 servings) - suitable for personal use.<br>
-								Premium Gift Box: US$19.99 (5 premium servings) - the most elegant choice for gifts.
+								Bulk Pack: A$45.99 (16 servings) - suitable for personal use.<br>
+								Premium Gift Box: A$29.99 (5 premium servings) - the most elegant choice for gifts.
 							</p>
 						</div>
 						<div class="image">
@@ -468,8 +468,8 @@
 							A Kitchen De-Greasing Remedy Helps with Sleep, Relieves Stress Low Calorie, Sugar-Free, No Burden
 							</p>
 							<p class="price">
-								Bulk Pack: US$29.99 (16 servings) - suitable for personal use.<br>
-								Premium Gift Box: US$19.99 (5 premium servings) - the most elegant choice for gifts.
+								Bulk Pack: A$45.99 (16 servings) - suitable for personal use.<br>
+								Premium Gift Box: A$29.99 (5 premium servings) - the most elegant choice for gifts.
 							</p>
 						</div>
 						<div class="image">
@@ -520,8 +520,8 @@
 							</p>
 					
 							<p class="price">
-								Bulk Pack: US$29.99 (16 servings) - suitable for personal use.<br>
-								Premium Gift Box: US$19.99 (5 premium servings) - the most elegant choice for gifts.
+								Bulk Pack: A$45.99 (16 servings) - suitable for personal use.<br>
+								Premium Gift Box: A$29.99 (5 premium servings) - the most elegant choice for gifts.
 							</p>
 						</div>
 						<div class="image">
