--- a/iiot/TPUF-2023/index.html
+++ b/iiot/TPUF-2023/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>東岸舖食節 Taitung Push Up Festival | 8/14 - 9/16 科技漫遊拿金幣</title>
-    <meta name='description'content="活動期間 8/14 - 9/16 科技漫遊，快來拿金幣！每天限量 1,000 名，發完為止。 " />
+    <title>東岸舖食節 Taitung Push Up Festival | 8/15 - 9/16 科技漫遊拿金幣</title>
+    <meta name='description'content="活動期間 8/15 - 9/16 科技漫遊，快來拿金幣！每天限量 1,000 名，發完為止。 " />
     <meta name='keywords' content="東岸舖食節, Taitung Push Up Festival, 科技漫遊生活 , 熱點, 送金幣, 台東縣政府, TTPush, 點點全球, DOTDOT GLOBAL" />
-    <meta property="og:title" content="東岸舖食節 Taitung Push Up Festival | 8/14 - 9/16 科技漫遊拿金幣" />
-    <meta property="og:description" content="活動期間 8/14 - 9/16 科技漫遊，快來拿金幣！每天限量 1,000 名，發完為止。" />
+    <meta property="og:title" content="東岸舖食節 Taitung Push Up Festival | 8/15 - 9/16 科技漫遊拿金幣" />
+    <meta property="og:description" content="活動期間 8/15 - 9/16 科技漫遊，快來拿金幣！每天限量 1,000 名，發完為止。" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="images/share_pic.png" />
     <meta property="og:url" content="#" />
@@ -45,7 +45,7 @@
                 <div class="event-content-top">
                 
                     <div class="main-title wow bounce an-repeat" data-wow-duration="3s">
-                        <img src="images/main-title.png" alt="東岸舖食節 Taitung Push Up Festival | 8/14 - 9/16 科技漫遊拿金幣">
+                        <img src="images/main-title-0815.png" alt="東岸舖食節 Taitung Push Up Festival | 8/15 - 9/16 科技漫遊拿金幣">
                     </div>
                     <div class="fillinBox">
                         <div class="inputBox">
@@ -68,7 +68,7 @@
                 <div class="note">
                     <h3>活動規則</h3>
                     <ul class="list">
-                        <li>活動期間：8/14 ~ 9/16。</li>
+                        <li>活動期間：8/15 ~ 9/16。</li>
                         <li>活動期間內，連線至任一個 <a href="https://tt-free.taitung.gov.tw/search-hotspot/" target="_blank">TTFREE
                                 熱點</a>，輸入會員電話即可領取金幣回饋 100 枚，<span class="c_yello">每天限量 1,000 名，發完為止</span>。</li>
                         <li>其他未盡事宜以本府活動訊息頁面為準。</li>
