--- a/iiot/TPUF-2023/html-collect/index.html
+++ b/iiot/TPUF-2023/html-collect/index.html
@@ -156,11 +156,11 @@
                     <li>
                         <p>235874</p>
                     </li>
-                    <li>
-                        <p></p>
+                    <li class="c_gray">
+                        <p>待揭曉</p>
                     </li>
-                    <li>
-                        <p></p>
+                    <li class="c_gray">
+                        <p>待揭曉</p>
                     </li>
                 </ul>
             </div>
