文字有修改

--- a/iiot/TPUF-2023/html-collect/index.html
+++ b/iiot/TPUF-2023/html-collect/index.html
@@ -140,7 +140,7 @@
             </div>
             <div class="middle-container">
                 <div class="img">
-                    <img src="images/serial_number.png" alt="市長消費抽獎">
+                    <img src="images/serial_number_0830.png" alt="市長消費抽獎">
                 </div>
                 <ul class="nbsss">
                     <!-- 中獎變色 + ya -->
