--- a/CRM/contract/project-contract_print_toRD.html
+++ b/CRM/contract/project-contract_print_toRD.html
@@ -723,7 +723,7 @@
             <li>
               <font
                 style="font-size:12px; line-height: 1.5; text-align: justify; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-                製作物基本規格說明</font>
+                製作物基本規則說明</font>
               <ul
                 style="font-size:12px;list-style-type: upper-alpha; margin:5px 0; padding-inline-start: 20px; font-family: Helvetica, '微軟正黑體',arial,sans-serif; padding-bottom: 5px;">
                 <li>
@@ -747,21 +747,27 @@
                       本專案規格之素人口碑行銷僅限寫手於論壇發布口碑文章。
                     </li>
                     <li style="padding-left: 10px;">
+                      每 5 組（含以內）之素人口碑行銷為 1 個執行單位，須於 1 個月內使用完畢。
+                    </li>
+                    <li style="padding-left: 10px;">
                       文章字數及內容無固定規格且一律不接受撰寫抨擊競品或政治相關敏感內容，為求文章貼近現實並避免文章太過商業化以致成效不佳，甲方可依需求選擇文章撰寫形式，但不得過度干涉文章內容及字數。如有強制干涉文章撰寫內容使文章有負面風向或被網站撤文之情形，由甲方自行承擔，恕不得要求補償。
                     </li>
                     <li style="padding-left: 10px;">
+                      如文章使用甲方所提供之圖片素材及必要撰寫內容，並於刊登後產生任何侵權或法律問題，須由甲方自行負擔所有權責。
+                    </li>
+                    <!-- <li style="padding-left: 10px;">
                       走期：1 週或 2 週，每日曝光次數固定。
                     </li>
                     <li style="padding-left: 10px;">
                       甲方須於預計上刊前 1 個月提供口碑行銷需求（Brief），收到完整需求及資料後，5 個工作天提供口碑行銷切角及時程規劃。待甲方確認內容無誤後，於文章刊登前 3 個工作天提交文章供甲方審核，甲方回覆確認且上刊後，不接受任何修正。回文內容將視網友談論風向，於 7 個工作天內給予適當回覆，恕不提供審核。
-                    </li>
+                    </li> -->
                   </ul>
                 </li>
                 <li>
                   <font
                     style="font-size:12px; line-height: 1.5; text-align: justify; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     製作時間<br>
-                    甲方須於預計上刊日前 1 個月提出需求，以利乙方預定檔期。除其中一方遭遇天災、人力不可抗拒之因素，或基於甲方要求變更而致無法遵守進度時，無論該變更是否經乙方同意，雙方得協調順延，另議執行日，且不得更行請求其他賠償。
+                    甲方須於預計上刊前 1 個月提供口碑行銷需求（Brief），收到完整需求及資料後，5 個工作天提供口碑行銷切角及 時程規劃。待甲方確認內容無誤後，於文章刊登前 3 個工作天提交文章供甲方審核，甲方回覆確認且上刊後，不接受任何修正。回文內容將視網友談論風向，於 7 個工作天內給予適當回覆，恕不提供審核。
                   </font>
                 </li>
               </ul>
@@ -907,6 +913,13 @@
                       拍攝道具由乙方拍攝團隊與甲方共同準備，拍攝團隊於拍攝前提供道具表，如有道具表外之道具需求，須由甲方自行準備，如有複雜度超出專案規格之拍攝需求，則需另外報價。
                     </li>
                   </ul>
+                </li>
+                <li>
+                  <font
+                    style="font-size:12px; line-height: 1.5; text-align: justify; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    拍攝地點<br>
+                    如產品或服務需於棚內拍攝，則由拍攝團隊提供專案搭配攝影棚執行拍攝；如產品或服務需於甲方指定地點拍 攝，免費外拍地點區域僅限台北地區及部分新北地區（蘆洲、三重、板橋、新莊、中永和、新店、土城、汐止、泰山），上述地點外，出機車馬費則需另外報價。
+                  </font>
                 </li>
                 <li>
                   <font
@@ -1571,7 +1584,7 @@
                 <li>
                   <font
                     style="font-size:12px; line-height: 1.5; text-align: justify; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-                    影片素材轉檔
+                    影片素材轉檔<br>
                     甲方最晚須於 2 周前提供影片素材供乙方影廳負責單位進行轉檔，甲方提供之影片不得包含腥羶色、借貸、暴力、政治相關敏感內容或違法行為。
                   </font>
                 </li>
@@ -1608,8 +1621,7 @@
             <li>
               <font
                 style="font-size:12px; line-height: 1.5;text-align: justify; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-                因專案委託項目中由乙方所交付之製作物，無論係付費或贈送的服務或方案，該項目所產生之製作物委託方應無償授權與威旭數據得自行或授權關係企業於其內部以任何方式使用，前述使用無任何期間限制。本條所謂內部使用，係指乙方或其關係企業，基於內部或集團運作所需進行非直接營利活動之目的，而公開口述、公開播送、公開上映、公開演出、公開傳輸、公開展示、公開發表及為前述目的而重製、改作、編輯依本合約創作完成之本專案製作物（包括但不限於將該本合約製作物使用於集團或公司介紹、歷史回顧相關製作物，並於內部向來訪賓客或於徵才活動、法說會、Road
-                Show、公司代表人或經理人授課演講等需對外介紹說明集團或公司發展歷史、經營狀況、未來策略時播放展示）。
+                因專案委託項目中由乙方所交付之製作物，無論係付費或贈送的服務或方案，該項目所產生之製作物，甲方應無償授權予乙方得自行或授權關係企業於其內部以任何方式使用，前述使用無任何期間限制。本條所謂內部使用，係指乙方或其關係企業，基於內部或集團運作所需進行非直接營利活動之目的，而公開口述、公開播送、公開上映、公開演出、公開傳輸、公開展示、公開發表及為前述目的而重製、改作、編輯依本合約創作完成之本專案製作物（包括但不限於將該本合約製作物使用於集團或公司介紹、歷史回顧相關製作物，並於內部向來訪賓客或於徵才活動、法說會、Road Show、公司代表人或經理人授課演講等需對外介紹說明集團或公司發展歷史、經營狀況、未來策略時播放展示）。若甲方有商業使用機密之考量，須另行與乙方約定使用限制或相關規範，如未告知則視同同意上述內容。
               </font>
             </li>
             <li>
