2023-鋪食金幣活動-更改新增圖片與更改路徑

--- a/iiot/TPUF-2023/html-collect/index.html
+++ b/iiot/TPUF-2023/html-collect/index.html
@@ -47,21 +47,21 @@
                         <tr>
                             <td>
                                 <img class="done" src="images/stamp_done.png" alt="done">
-                                <img src="images/stamp_01.png" alt="集章區">
+                                <img src="images/stamp_01.png" alt="政令宣導攤一">
                             </td>
                             <td>
-                                <img src="images/stamp_02.png" alt="集章區">
+                                <img src="images/stamp_02.png" alt="自備環保容器">
                             </td>
                             <td>
-                                <img src="images/stamp_03.png" alt="集章區">
+                                <img src="images/stamp_03_0831.png" alt="參加現場食農小學堂">
                             </td>
                             <td>
-                                <img src="images/stamp_04.png" alt="集章區">
+                                <img src="images/stamp_04_0831.png" alt="慢活場域單筆消費500枚">
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <img src="images/stamp_05.png" alt="集章區">
+                                <img src="images/stamp_09_0831.png" alt="慢遊場域單筆消費500枚">
                             </td>
                             <td>
                                 
@@ -70,21 +70,21 @@
                                 
                             </td>
                             <td>
-                                <img src="images/stamp_06.png" alt="集章區">
+                                <img src="images/stamp_06_0831.png" alt="慢時場域單筆消費500枚">
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <img src="images/stamp_07.png" alt="集章區">
+                                <img src="images/stamp_06.png" alt="TTFREE連線">
                             </td>
                             <td>
-                                <img src="images/stamp_08.png" alt="集章區">
+                                <img src="images/stamp_07.png" alt="衛生局政令宣導攤">
                             </td>
                             <td>
-                                <img src="images/stamp_09.png" alt="集章區">
+                                <img src="images/stamp_08.png" alt="政令宣導攤二">
                             </td>
                             <td>
-                                <img src="images/stamp_10.png" alt="集章區">
+                                <img src="images/stamp_10.png" alt="綁定NFT">
                             </td>
                         </tr>
                     </table>
